--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "json2xls": "^0.1.2",
     "mongoose": "^5.9.13",
     "morgan": "^1.10.0"
   },
