--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "fs": "0.0.1-security",
     "json2xls": "^0.1.2",
     "mongoose": "^5.9.13",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "xlsx-to-json-lc": "^0.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
