--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "author": "chaitanya Patil",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "json2xls": "^0.1.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
     "morgan": "^1.10.0",
     "xlsx-to-json-lc": "^0.5.0"
