--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "xlsx-to-json-lc": "^0.5.0"
   },
   "devDependencies": {
